[tool.poetry]
name = "stochastic-decision-modeling"
version = "0.1.0"
description = ""
authors = ["Russell Kim <russellkim98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11, <=3.12.0"
streamlit = "^1.28.2"
plotly = "^5.18.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
ipdb = "^0.13.13"
jupyterlab = "^4.0.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
