[tool.poetry]
name = "stochastic-decision-modeling"
version = "0.1.0"
description = "Playground for SDM"
authors = ["Russell Kim <russellkim98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
tensorflow = "^2.15.0"
tf-agents = "^0.18.0"
jupyterlab = "^4.0.9"
tensorflow-datasets = "4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
